SPRING FRAMEWORK CHANGELOG
==========================
$Id: changelog.txt,v 1.126 2004-04-09 20:41:25 jhoeller Exp $


Changes in version 1.0.1 (11.4.2003)
------------------------------------

Package org.springframework.aop
* refined usage of AopConfigException, to avoid cyclic dependencies between org.springframework.aop subpackages
* moved internal class AopUtils from package aop.framework.support to aop.support, to avoid cyclic package dependencies

Package org.springframework.beans
* added "getPropertyType" method to BeanWrapper/BeanWrapperImpl, capable of checking indexed/mapped elements
* BeanWrapperImpl allows registration of custom editors for array/List/Map properties
* BeanWrapperImpl allows registration of custom editors for specific elements of array/List/Map properties
* added InputStreamEditor to standard PropertyEditors, for creating java.io.InputStream instances from String locations
* added ByteArrayPropertyEditor to standard PropertyEditors, for turning Strings into their byte representations
* added DestructionAwareBeanPostProcessor subinterface, adding a before-destruction callback
* AbstractBeanFactory overrides parent bean if child name equals parent name (rather than causing a stack overflow)
* AbstractAutowireCapableBeanFactory throws more expressive exceptions if a custom init-method failed
* AbstractAutowireCapableBeanFactory throws an exception if a BeanPostProcessor returns null as bean instance

Package org.springframework.core
* added check whether cause is "this" to NestedRuntime/CheckedException, to avoid stack overflow in obscure scenarios

Package org.springframework.context
* AbstractXml/StaticApplicationContext use internal bean factory of parent context as parent for their bean factory
* AbstractXml/StaticApplicationContext properly check parent context for referenced parent beans (bean parent="...")
* removed unused default constructor and protected setters from DefaultMessageSourceResolvable